syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "PredictionService";

package proto;

service PredictService {
  rpc predict (BatteryData) returns (Result) {}
}

message BatteryData {
  double Temperature = 1;
  double voltage = 2;
  double current = 3;
}

message Result {
  string message = 1;
}
